# maze_solver

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  TODO.md  setup.cfg  solve.py
input_examples/: input_1.txt  input_2.txt  input_3.txt
solver/: __init__.py  main.py  pattern.py  vertex.py
