[metadata]
name = Maze_solver
version = file: version.txt
author = Fadi Asfour
author-email = fadi.asfour@gmail.com
home-page = https://github.com/asfourco/maze_solver
description = Maze solver routine
long-description = file: README.md
long_description_content_type = text/markdown
keywords = Python, solver, Dijkstra
license = GPLv3
license-file = LICENSE
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    Framework :: Django
    License :: OSI Approved :: GPL V3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
project_urls = 
    Bug Tracker = https://github.com/asfourco/maze_solver/issues

[flake8]
ignore =
    # E203: whitespace before ':' -- not PEP8 compliant
    E203
    # E501: line too long error
    E501,
    # W503: line break before binary operator -- not PEP8 compliant
    W503,
    # F401: import not used -- temporary disable for development
    F401
exclude = 
  .git,
  __pycache__,
  build,
  dist,
  .venv,
  .env
max-complexity = 10
